convert callback style to promise style

--- a/test.html
+++ b/test.html
@@ -6,14 +6,15 @@
 </head>
 <body>
 <input  type='file' id='test'/>
-<script src="./dist/frontend-compress.js"></script>
+<script src="./dist/frontend-compress.min.js"></script>
 <script>
   const $file = document.querySelector('#test');
-  $file.onchange = function(e) {
+  $file.onchange = async function(e) {
     const file = e.target.files[0];
-    compressImageFile({file, quality:0.5},(err, newFile) => {
-      if(err) alert(err.toString())
-      else alert(`original size: ${file.size}, compressed size: ${newFile.size}`)
+    compressImageFile(file,0.5).then(res=>{
+      alert(`original size: ${file.size}, compressed size: ${res.size}`)
+    }).catch(err=>{
+      alert(err.toString())
     })
   }
 </script>
