change module name to frontend-image-compress and update related files

--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <input  type='file' id='test'/>
-<script src="./dist/frontend-compress.js"></script>
+<script src="./dist/frontend-image-compress.js"></script>
 <script>
   const $file = document.querySelector('#test');
   $file.onchange = async function(e) {
